docker-registry/k8s/ingress/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registry
  namespace: registry
spec:
  ingressClassName: nginx
  rules:
  - host: registry.bookserver.home
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: registry
            port:
              number: 5000
      # - pathType: Prefix
      #   path: "/v2/"
      #   backend:
      #     service:
      #       name: registry
      #       port:
      #         number: 5000
