docker-registry/k8s/ingress/front-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: registry-front
  namespace: registry
spec:
  rules:
  - host: registry.bookserver.local
    http:
      paths:
      - backend:
          serviceName: registry-front
          servicePort: 80
